--- a/index.html
+++ b/index.html
@@ -8,22 +8,29 @@
 </head>
 
 <body>
-  <section class="image">
-    <img src="images/pyramid-giza.jpg" alt="">
+<!-- Dividing the text area from the image -->
+  <section>
+
+<!-- Division for the image -->
+    <div class="image">
+      <img src="images/pyramid-giza.jpg" alt="">
+    </div>
+
+<!-- Division for the text area -->
+    <div class="text">
+      <h2>
+        Great Pyramid of Giza
+      </h2>
+
+      <p>
+        The Great Pyramid of Giza (also known as the Pyramid of Khufu or the Pyramid of Cheops) is the oldest and largest of the three pyramids in the Giza pyramid complex bordering what is now El Giza, Egypt. It is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely intact.</p>
+
+      <a href="#"> Visit Khufu </a>
+
+    </div>
 
   </section>
 
-  <section class="text">
-    <h2>
-      Great Pyramid of Giza
-    </h2>
-
-    <p>
-      The Great Pyramid of Giza (also known as the Pyramid of Khufu or the Pyramid of Cheops) is the oldest and largest of the three pyramids in the Giza pyramid complex bordering what is now El Giza, Egypt. It is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely intact.</p>
-
-    <a href="#"> Visit Khufu </a>
-
-  </section>
 </body>
 
 </html>
